# sdfp-photo-api

./: .gitignore  Dockerfile  README.md  database.py  db_functions.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
app/: blurring_functions.py  database.py  db_functions.py  log_conf.yaml  main.py  models.py  schemas.py
app/camera_blur_regions/: BF_01_blur.json  CB_01B_blur.json  CB_01_blur.json  CB_02_blur.json  CB_03_blur.json  DE_01_blur.json  DE_03_blur.json  NB_01_blur.json  NB_02_blur.json  NR_01_blur.json
app/image_blurring_tutorial/: environment.yml  test_blur.ipynb
app/image_blurring_tutorial/test_images/: your_site_name.json
