[tool.poetry]
name = "sdfp-photo-api"
version = "0.1.1"
description = ""
authors = ["Adam Gold <47038242+acgold@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ExifRead = "^3.0.0"
arrow = "^1.2.2"
fastapi = "^0.77.1"
SQLAlchemy = "^1.4.36"
google-api-python-client = "^2.47.0"
google-auth-oauthlib = "^0.5.1"
google-auth-httplib2 = "^0.1.0"
oauth2client = "^4.1.3"
Pillow = "^9.1.1"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
